@@ -1,6 +1,7 @@
 Version 2.2.0.1
 =================
 bear:
+Changed the FillBuffer wait for file building method from a 50ms delay to a 2 second long retry at 50ms intervals. This is to get around file corruption caused by some drivers. 
 Fixed a bug where the filter was not seeking correctly on the first seek, the internal bitrate was not being updated in the pids array. This was apparant on large files.
 
 Version 2.2.0.0
